# pokeapi

./: .env.example  .env.production  .env.test  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  gunicorn_config.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  run_test.py  run_test_ui.py  tailwind.config.js  webpack.config.js
.github/workflows/: python-app.yml
app/: __init__.py  cache_module.py  database.py  email_token.py  helpers.py  models.py  oauth.py  pokemon_api.py  services_provider.py  settings.py  views.py
app/cache_service/: cache_file.py  cache_interface.py  cache_redis.py  cache_test.py
app/controllers/: auth.py  battle.py  oauth.py  show_pokemons.py
app/forms/: authentification.py  oauth_confirm_registration.py  registration.py  reset_password.py  reset_password_request.py
app/ftp_service/: ftp_interface.py  ftp_service.py  ftp_test.py
app/logs_service/: logs.py  logs_file.py  logs_interface.py  logs_test.py
app/mail_service/: mail_interface.py  mail_log.py  mail_smtp.py  mail_test.py
app/seeders/: battles_history.py
app/templates/: base.html  battle.html  email_confirmed.html  error_page.html  index.html  login.html  oauth_confirm_registration.html  pokemon.html  reset_password.html  reset_password_request.html  second_factor.html  sign_up.html
jstools/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
tests/: __init__.py  api_battle_write_result.py  api_certain_pokemon.py  api_pokemons.py  api_save_pokemon_to_ftp.py  cache_file.py  logs_file.py
(+12 files in other folders)
